# gooaye-pipeline

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  todo.md
config/: settings.yaml
src/gooaye/: analyzer.py  bot.py  config.py  crawler.py  main.py  models.py  notifier.py  pipeline.py  scheduler.py  store.py  transcriber.py  validator.py
tests/: test_analyzer.py  test_bot.py  test_config.py  test_crawler.py  test_notifier.py  test_pipeline.py  test_scheduler.py  test_store.py  test_transcriber.py  test_validator.py
